# pico-hello-world

./: CMakeLists.txt  README.md  build.py  hello.cpp
